--- a/webcounter/report.html
+++ b/webcounter/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,8254],[[4,5,6,0,[],[1,21,8232],[],[[7,0,0,[],[1,805,2115],[]],[8,0,0,[],[1,2922,4767],[]]],[],[2,2,0,0]]],[],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,15226],[[4,5,6,0,[],[1,10,7866],[],[[7,0,0,[],[1,436,2100],[]],[8,0,0,[],[1,2537,4775],[]]],[],[2,2,0,0]],[9,10,11,0,[],[1,7878,7346],[],[[12,0,0,[],[1,8286,6371],[]]],[],[1,1,0,0]]],[],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/jesselah/Desktop/webcounter/webcounter/webcounter/src/tests","*src/tests","*Increment","*/home/jesselah/Desktop/webcounter/webcounter/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/jesselah/Desktop/webcounter/webcounter/webcounter/src/tests","*src/tests","*Increment","*/home/jesselah/Desktop/webcounter/webcounter/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*Reset","*/home/jesselah/Desktop/webcounter/webcounter/webcounter/src/tests/reset.robot","*src/tests/reset.robot","*When button is pressed twice and reset the counter is 0"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":2,"skip":0},{"elapsed":"00:00:08","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:15","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":3,"skip":0},{"elapsed":"00:00:08","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":2,"skip":0},{"elapsed":"00:00:07","fail":0,"id":"s1-s2","label":"Tests.Reset","name":"Reset","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731589493589;
+window.output["baseMillis"] = 1731681855866;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8260;
+window.output["generated"] = 15234;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
